[project]
name = "isatoolkit2"
version = "0.1.0"
description = ""
authors = [
    {name = "rpolicastro",email = "31133814+rpolicastro@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "pysam (>=0.23.0,<0.24.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry.scripts]
isatoolkit2 = "isatoolkit2.main:cli"

[tool.poetry]
packages = [{include = "isatoolkit2", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pytest = "^8.3.5"
pyright = "^1.1.398"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select=["ALL"]
ignore=[
    "D211",
    "D212",
]

[tool.ruff.lint.per-file-ignores]
"src/isatoolkit2/sam/mapping_filter.py"=["PLR0913"]
"src/isatoolkit2/sam/fiveprime_filter.py"=["PLR0913"]
"src/isatoolkit2/utils.py"=["N805"]
"src/isatoolkit2/main.py"=["PLR0913"]